--- a/EDA.Rmd
+++ b/EDA.Rmd
@@ -1,15 +1,28 @@
-# EDA
+---
+title: "EDA"
+author: "Alex Furuya"
+date: "5/2/2018"
+output: html_document
+---
 
+```{r, message = F}
 # Loading packages
 library(tidyverse)
+```
 
+```{r, message = F}
 # Loading data
 hospice <- read_tsv("data/unprocessed/28961-0002-Data.tsv")
+```
 
+```{r, message = F}
 # Looking at number of missing values
 count_na <- hospice %>% 
   summarise_all(funs(sum(is.na(.)))) %>%
   gather(count_na) %>% 
   arrange(desc(value)) %>%
   filter(value > 0)
+count_na
+```
+
 
